--- a/colloseum.html
+++ b/colloseum.html
@@ -41,7 +41,7 @@
                         4d7f8b8e2c8bf&lqi=Colosseum%2C+Roma%2C
                         Italy%2C+Italian+Capital%2C+Museums%2C+Tourism+%E2%80%
                         A6&rlfi=hd:;si:1;mv:[[41.903,-87.62]];t
-                        s:[WD];qsn:[1B]"><button type="submit" value="Book Now!" onclick="alert('Thank You!')"> Book
+                        s:[WD];qsn:[1B]"><button type="submit" value="Book Now!" onclick="alert('Thank You!')"> Book</a>
 
                                   
 
@@ -53,7 +53,6 @@
         <div class="back">
             <button onclick="document.location='index.html'">Back</button></div>
         </div>
-
 
     </div>
 
